[project]
name = "TestRepo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Andrey-Ukhnalyov-20", email = "andrey_ukhnalev20@mail.ru"},
]
dependencies = [
    "flet==0.19.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "GPL-3.0"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
auto-check = [
    "pre-commit>=3.6.1",
    "ruff>=0.2.2",
    "mypy>=1.8.0",
]
